Fix header layout on mobile landscape orientation

--- a/_sass/_reflow.scss
+++ b/_sass/_reflow.scss
@@ -8,7 +8,6 @@
 	}
 	.home-link {
 		padding: .5em;
-		width: 1.3em;
 	}
 	.page-wrapper, .footer-wrapper {
 		max-width: 25em;
